deploy/overlays/production/store-deployer-production-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-deployer
  namespace: naytife
spec:
  template:
    spec:
      containers:
      - name: store-deployer
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
